// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EpisodeList should have same snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="sc-fFeiMQ iEkKp"
  >
    <span
      class="sc-dkPtRN dSzjxW"
      color="#444"
    >
      Episodes
    </span>
  </div>
  <div
    class="sc-ksdxgE eKpHrr"
  >
    <ul
      class="sc-fotOHu bWDwWu"
    >
      <li
        class="sc-hBUSln iCYrLD"
      >
        <span
          aria-busy="true"
          aria-live="polite"
        >
          <span
            class="react-loading-skeleton"
          >
            ‌
          </span>
          <br />
          <span
            class="react-loading-skeleton"
          >
            ‌
          </span>
          <br />
          <span
            class="react-loading-skeleton"
          >
            ‌
          </span>
          <br />
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`EpisodeList should have same snapshot when rendering values 1`] = `
<DocumentFragment>
  <div
    class="sc-fFeiMQ iEkKp"
  >
    <span
      class="sc-dkPtRN dSzjxW"
      color="#444"
    >
      Episodes
    </span>
  </div>
  <div
    class="sc-ksdxgE eKpHrr"
  >
    <ul
      class="sc-fotOHu bWDwWu"
    >
      <li
        class="sc-hBUSln iCYrLD"
      >
        <span
          class="sc-dkPtRN fYoYQt"
          color="#444"
        >
          S01E01 - one
        </span>
      </li>
      <li
        class="sc-hBUSln iCYrLD"
      >
        <span
          class="sc-dkPtRN fYoYQt"
          color="#444"
        >
          S01E02 - two
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
